--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,53 @@
 header {
-    height: 300px;
+    height: 100px;
     width: 100%;
     background-color: saddlebrown;
     border-bottom: 30px solid gold;
+}
+
+.section-1 {
+    background-color: white;
+    padding: 200px green;
+    border: 20px black;
+    color: black;
+    font-family: monospace;
+    text-align: center;
+    height: auto;
+    padding: 5%;
+}
+
+.section-2 {
+    border-top: 20px solid gold;
+    background-color: saddlebrown;
+    color: white;
+    font-family:monospace;
+    text-align: center;
+}
+
+h1, h3 {
+    text-align: center;
+    font-family:monospace;
+}
+
+footer {
+    text-align: center;
+    font-family: monospace;
+    background-color: gold;
+}
+
+.menu-items {
+    display:inline;
+    padding: 20px; 
+    font-family: monospace;
+    font-size:larger;
+    position:relative;
+    top: 110px;
+    left: 900px;
+
+}
+
+img {
+    padding: 100px 100px gold;
+    border: 10px solid gray;
+
 }
